--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "payapi",
   "version": "0.1.0",
+  "homepage": "http://ittybe.github.io/payapi",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
@@ -15,9 +16,11 @@
   },
   "scripts": {
     "start": "craco start",
-     "build": "craco build",
-     "test": "craco test",
-    "eject": "react-scripts eject"
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
